--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ pycparser==2.22
 PyJWT==2.10.1
 PyMySQL==1.1.1
 python-dotenv==1.1.0
-python-magic-bin==0.4.14
+python-magic==0.4.27
 setuptools==78.1.0
 SQLAlchemy==2.0.40
 typing_extensions==4.13.1
