--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,11 @@ cffi==1.17.1
 click==8.1.8
 colorama==0.4.6
 cryptography==3.4.8
+filetype==1.2.0
 Flask==3.1.0
 flask-cors==5.0.1
 Flask-JWT-Extended==4.7.1
+Flask-Mail==0.10.0
 Flask-SQLAlchemy==3.1.1
 greenlet==3.1.1
 gunicorn==20.0.4
@@ -16,7 +18,7 @@ pycparser==2.22
 PyJWT==2.10.1
 PyMySQL==1.1.1
 python-dotenv==1.1.0
-filetype==1.2.0
+pytz==2025.2
 setuptools==78.1.0
 SQLAlchemy==2.0.40
 typing_extensions==4.13.1
